# ros2_task_set

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  aaa.txt  compare_response_time.ipynb  dag.yaml  dag_file_mapping.csv  dags.yaml  disable_cpus.sh  enable_all_cpus.sh  evaluate.ipynb  first_case.yaml  kill_benchmark.sh  package.xml  perf_sched.ipynb  run_benchmark.sh
ActualDAGSet/: convert.py
ActualDAGSet/TU_1.0/: case_1.yaml  case_1_taskset.yaml  cie_case_1.yaml
ActualDAGSet/TU_1.5/: case_2.yaml  case_2_taskset.yaml  case_3.yaml  case_3_taskset.yaml  case_4.yaml  case_4_taskset.yaml  case_5.yaml  case_5_taskset.yaml  case_6.yaml  case_6_taskset.yaml  cie_case_2.yaml  cie_case_3.yaml  cie_case_4.yaml  cie_case_5.yaml  cie_case_6.yaml
ActualDAGSet/TU_2.0/: case_10.yaml  case_10_taskset.yaml  case_11.yaml  case_11_taskset.yaml  case_7.yaml  case_7_taskset.yaml  case_8.yaml  case_8_taskset.yaml  case_9.yaml  case_9_taskset.yaml  cie_case_10.yaml  cie_case_11.yaml  cie_case_7.yaml  cie_case_8.yaml  cie_case_9.yaml
ActualDAGSet/TU_2.5/: case_12.yaml  case_12_taskset.yaml  case_13.yaml  case_13_taskset.yaml  (+11 more)
awkernel_results/: RD-Gen(GEDF3)_TU10.csv  RD-Gen(GEDF3)_TU15.csv  RD-Gen(GEDF3)_TU20.csv  RD-Gen(GEDF3)_TU25.csv  RD-Gen(GEDF3)_TU30.csv
benchmark_results/: results_20260227_130120.txt
launch/: dummy_node.launch.xml
perf_logs/: 20240709_cfs_cpu2.txt
scripts/: caret_record.bash  fix_frequencies.bash  generate_cie_configs.bash  generate_cie_sched_deadline.py  launch_with_caret.bash  rebuild.bash  setup_capability.sh
src/: dummy_node.cpp
(+31 files in other folders)
